added 2017 and 2018 news

--- a/news/2017.md
+++ b/news/2017.md
@@ -1,88 +1,8 @@
 ---
 layout: page
 title: News
-permalink: /news/
-subtitle: What is happening in the Cocoan lab?
+subtitle: What happened in the Cocoan lab during 2017?
 ---
-<span style="font-size: 15px !important; color: #BD0026;">Aug 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong Lee</span> is selected to receive the Global PhD Fellowship (GPF, 글로벌박사펠로우십) from Korean National Research Foundation.</span></b>
-
-<img src="images/JJ_bookshelf.jpg" width="700" align="center" hspace="20" />
-
-<span style="font-size: 15px !important; color: #555;">Congratulations, Jaejoong! The GPF is  highly competitive (this year, the competition rate was 5.3:1), but we knew Jaejoong would get it. :) Also great great job, Cocoanlab! All lab members helped him and worked together to make this happen. Wani said that he is so proud of Cocoanlab!</span>
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Three undergrad RAs (<span style="color: #1c9099;">Hyebin Kim</span>, <span style="color: #1c9099;">Seeyun Lee</span>, and <span style="color: #1c9099;">Jihoon Han</span>) joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out their research interests and brief introduction [here](/people/current).
-
-<br>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">Jul 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Yejin Chung</span> and <span style="color: #1c9099;">Wonkyung Choi</span> successfully finished 2018 CNIR summer internship program.</span></b>
-
-<img src="images/Summerinterns2018.jpg" width="800" align="center" hspace="20" />
-
-<span style="font-size: 15px !important; color: #555;">For one-month period (6/25-7/20), Hongji (a grad student) and summer interns worked together on a very exciting new project on decoding stories based on brain activity. They almost completed experiment codes. Unfortunately, we didn't make it to fMRI data analysis. Yejin and Wonkyung, please come back to the lab if you'd like to continue the fMRI experiments and analyses you've started here. :)</span>
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">A paper titled "Cognitive self-regulation influences pain-related physiology" was posted on bioRxiv</span></b>
-
-<span style="font-size: 15px !important; color: #555;">You can see the paper <a href="https://www.biorxiv.org/content/early/2018/07/04/361519">here</a>, and I wrote some background story about the paper on <a href="https://twitter.com/choongwanwoo/status/1015173555984654337">twitter</a>.</span>
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">A paper titled "False-positive neuroimaging: Undisclosed flexibility in testing anatomical region-based hypotheses allows presenting anything as a replicated finding" (first author: Yongwook) has been submitted and now is under review</span></b>
-
-<br>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">Jun 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong</span> and <span style="color: #1c9099;">Byeol</span> gave poster presentations at the annual meeting of the Korean Society for Cognitive Science, and <span style="color: #1c9099;">Byeol</span> received a Best Presentation Award. Congrats!</span></b>
-
-<img src="images/kscs2018.jpg" width="800" align="center" hspace="20" />
-
-<span style="font-size: 15px !important; color: #555;">(Left top) Jaejoong, Suhwan, Hongji, Sooan, Jinwon, and Byeol. See Byeol's face expression. She seems happy for the award. (Left bottom) Byeol is receiving the award. (middle) Byeol is presenting her work. (Right) Jaejoong is explaining his work to Dr. Yuki Kamitani (he was a plenary speaker of the conference). 
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Sangeun Yeom</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out her research interests and brief introduction [here](/people/current).
-
-<br>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">Mar 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jin Oh</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out her research interests and brief introduction [here](/people/current).
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">Feb 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Seong Jae Park</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out his research interests and brief introduction [here](/people/current).
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">Jan 2018 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">A paper on "Generalizable representations of pain, cognitive control, and negative emotion in medial frontal cortex" is in press on <i>Nature Neuroscience</i></span></b>
-
-<span style="font-size: 15px !important; color: #555;">Phil Kragel (a postdoc in Tor Wager's lab) is the first author of the [paper](/publication/#NN_Kragel2018). Wani contributed to this study by sharing our recent fMRI data. Wani <i>knew</i> that this paper will become big from the beginning! :) Wani was so happy and appreciate to be a part of this study. Thanks, Phil. You did a great job! </span>
-
-<br>
-
 <span style="font-size: 15px !important; color: #BD0026;">Dec 2017 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jinwon Park</span> joined the Cocoan lab!</span></b>
