--- a/news/2018.md
+++ b/news/2018.md
@@ -82,98 +82,6 @@ subtitle: What is happening in the Cocoan lab?
 
 <br>
 
-<span style="font-size: 15px !important; color: #BD0026;">Dec 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jinwon Park</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out her research interests and brief introduction [here](/people/current).
-
-<br>
+<span style="font-size: 20px !important; color: #BD0026;">Go to 2017 news [link](/news/2017) </span>
 
 
-<span style="font-size: 15px !important; color: #BD0026;">Sep 2017 </span>
-
-<span style="font-size: 20px !important; color: #0055A9;"><b>Happy lab!</b></span>
-
-<img src="images/lab_photo_20170928_2.jpg" width="600" align="center" hspace="20" />
-
-<img src="images/lab_photo_1.jpg" width="600" align="center" hspace="20" />
-
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">Sep 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Myeonghun Beak, Taenyun Kim, Yelin Lee</span> and <span style="color: #1c9099;">Minie Jung</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out their research interests and brief introduction [here](/people/current).
-
-<br>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">Aug 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Lada Kohoutová, Catherine Cho, Byeol Kim</span> and <span style="color: #1c9099;">Suhwan Gim</span> joined the Cocoan lab!</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out their research interests and brief introduction [here](/people/current).
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">July 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">NaEun Oh</span> and <span style="color: #1c9099;">Jiewon Kang</span> successfully finished 2017 CNIR summer internship program.</span></b>
-
-<img src="images/Summerinterns2017_poster.jpg" width="700" align="center" hspace="20" />
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">June 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Hong Ji Kim, Yejong Yoo, Sooan Lee, Jeongwon Shin</span>, and <span style="color: #1c9099;">Chanhoo Kum</span> joined the lab as undergrad research assistants.</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out their research interests and brief introduction [here](/people/current).
-
-<br>
-
-<span style="font-size: 15px !important; color: #BD0026;">May 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jongyun Jeong</span> joined the lab as undergrad research assistants.</span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out his research interest and brief introduction [here](/people/current).
-
-<br>
-
-
-<span style="font-size: 15px !important; color: #BD0026;">March 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">A new paper on placebo effects on painful emotions due to social rejection has been published on <i>Journal of Neuroscience</i>. </span></b>
-
-<span style="font-size: 15px !important; color: #555;">Here is the <a href="/pdfs/Koban_2017_JN.pdf">PDF</a> of the paper.</span>
-
-<br>
-
-
-
-<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Yongwook Hong</span> and <span style="color: #1c9099;">Jaejoong Lee</span> joined the lab. </span></b>
-
-<span style="font-size: 15px !important; color: #555;">Check out their research interest and brief introduction [here](/people/current).
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Our paper on building better neuroimaging biomarkers has been published on <i>Nature Neuroscience</i>. </span></b>
-
-<span style="font-size: 15px !important; color: #555;">This <a href="/pdfs/Woo_2017_NatNeuro.pdf">paper</a> contains important ideas about what translational neuroimaging research would look like in the future. Also if you're interested in joining the lab, you would be able to learn what our near-future research direction could be from this paper.</span>
-
-<br>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">We are joining the IBS Center for Neuroscience Imaging Research (CNIR) at Sungkyunkwan University. </span></b>
-
-<span style="font-size: 15px !important; color: #555;"> Starting March 2017, we are joining the <a href="https://www.ibs.re.kr">IBS</a> <a href="http://cnir.ibs.re.kr/html/cnir_en/">Center for Neuroscience Imaging Research</a> and <a href="http://www.skku.edu/eng_home/index.jsp">Sungkyunkwan University</a>. Our lab will be located in Suwon, which is near Seoul in South Korea, and more specifically the <a href="https://www.google.com/maps/place/성균관대학교+자연과학캠퍼스/@37.2933069,126.9756129,3a,75y,185.03h,87.96t/data=!3m8!1e1!3m6!1s-QurvzUlLyfM%2FV6-taG4WiVI%2FAAAAAAAAACc%2F6TUAFkNNYlcsLNVOMNF4yr9bz41wz3d2ACJkC!2e4!3e11!6s%2F%2Flh6.googleusercontent.com%2F-QurvzUlLyfM%2FV6-taG4WiVI%2FAAAAAAAAACc%2F6TUAFkNNYlcsLNVOMNF4yr9bz41wz3d2ACJkC%2Fw203-h100-k-no-pi-0-ya160.43434-ro-0-fo100%2F!7i8704!8i4352!4m5!3m4!1s0x357b42b036588595:0xee747d46c57fc8a4!8m2!3d37.2939168!4d126.9753993!6m1!1e1">N-center</a> at Sungkyunkwan University. We are planning to hire some people (postdoc and lab manager) for the lab. If you are interested in joining the lab, you can find some relevant information [here](/jobs/).</span>
-
-
-<p id="NCOMMS2017"></p><br>
-<span style="font-size: 15px !important; color: #BD0026;">February 2017 </span>
-
-<b><span style="font-size: 20px !important; color: #0055A9;">Our paper on developing predictive models for pain using multi-study fMRI data is published on <i>Nature Communications</i>.</span></b>
-
-<span style="font-size: 15px !important; color: #555;"> It's finally <a href="http://www.nature.com/articles/ncomms14211">online</a> (<a href="/pdfs/Woo_2017_NCOMMS.pdf">pdf</a>; see [Publication](/publication/) for more links). In this new paper, we identified a new fMRI pattern that is predictive of pain above and beyond stimulus intensity and nociceptive brain response. Tor and I had this analysis idea since my second year of the graduate school, and I did the first version of this study as a final project for Tor's fMRI method class. Thanks to our lab's collaborative efforts to create the large-scale single-trial pain dataset, I was able to scale up the study, and the final version of the study ended up including data from six different pain studies (_N_ = 183). This was one of the main reasons that our paper was able to be published on _Nature Communications_. The pattern we identified explained variation in trial-by-trial pain ratings not captured by a previous fMRI-based marker for nociceptive pain (i.e., <a href="../pdfs/Wager_2013_NEJM.pdf">Neurologic Pain Signature</a>). In addition, the new pattern mediated the pain-modulating effects of three psychological manipulations of expectations and perceived control. We hope that the new pattern signature provides a generalizable and extensible characterization of cerebral contributions to pain and specific brain targets for interventions.</span> 
