--- a/news/2018.md
+++ b/news/2018.md
@@ -7,7 +7,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong Lee</span> is selected to receive the Global PhD Fellowship (GPF, 글로벌박사펠로우십) from Korean National Research Foundation.</span></b>
 
-<img src="images/JJ_bookshelf.jpg" width="700" align="center" hspace="20" />
+<img src="/news/images/JJ_bookshelf.jpg" width="700" align="center" hspace="20" />
 
 <span style="font-size: 15px !important; color: #555;">Congratulations, Jaejoong! The GPF is  highly competitive (this year, the competition rate was 5.3:1), but we knew Jaejoong would get it. :) Also great great job, Cocoanlab! All lab members helped him and worked together to make this happen. Wani said that he is so proud of Cocoanlab!</span>
 
@@ -24,7 +24,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Yejin Chung</span> and <span style="color: #1c9099;">Wonkyung Choi</span> successfully finished 2018 CNIR summer internship program.</span></b>
 
-<img src="images/Summerinterns2018.jpg" width="800" align="center" hspace="20" />
+<img src="/news/images/Summerinterns2018.jpg" width="800" align="center" hspace="20" />
 
 <span style="font-size: 15px !important; color: #555;">For one-month period (6/25-7/20), Hongji (a grad student) and summer interns worked together on a very exciting new project on decoding stories based on brain activity. They almost completed experiment codes. Unfortunately, we didn't make it to fMRI data analysis. Yejin and Wonkyung, please come back to the lab if you'd like to continue the fMRI experiments and analyses you've started here. :)</span>
 
@@ -45,7 +45,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong</span> and <span style="color: #1c9099;">Byeol</span> gave poster presentations at the annual meeting of the Korean Society for Cognitive Science, and <span style="color: #1c9099;">Byeol</span> received a Best Presentation Award. Congrats!</span></b>
 
-<img src="images/kscs2018.jpg" width="800" align="center" hspace="20" />
+<img src="/news/images/kscs2018.jpg" width="800" align="center" hspace="20" />
 
 <span style="font-size: 15px !important; color: #555;">(Left top) Jaejoong, Suhwan, Hongji, Sooan, Jinwon, and Byeol. See Byeol's face expression. She seems happy for the award. (Left bottom) Byeol is receiving the award. (middle) Byeol is presenting her work. (Right) Jaejoong is explaining his work to Dr. Yuki Kamitani (he was a plenary speaker of the conference). 
 
