--- a/news/2018.md
+++ b/news/2018.md
@@ -3,6 +3,16 @@ layout: page
 title: News
 subtitle: What is happening in the Cocoan lab?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Nov 2018 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong Lee</span> and <span style="color: #1c9099;">Byeol Kim</span> successfully presented their beautiful work at the Society for Neuroscience 2018</span></b>
+
+<img src="/news/images/SFN2018.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Jaejoong gave a talk titled "An fMRI Signature of Tonic Pain: Based on whole-brain functional connectivity" at a Pain Neuroimaging Nanosymposium, and Byeol presented a poster titled "Dynamic modeling and brain decoding of internal thoughts and emotions." We look forward to posting our work on a preprint server soon. Stay tuned!</span>
+
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Aug 2018 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong Lee</span> is selected to receive the Global PhD Fellowship (GPF, 글로벌박사펠로우십) from Korean National Research Foundation.</span></b>
