--- a/news/2018.md
+++ b/news/2018.md
@@ -3,6 +3,37 @@ layout: page
 title: News
 subtitle: What is happening in the Cocoan lab?
 ---
+<span style="font-size: 15px !important; color: #BD0026;">Dec 2018 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Cocoanlab research summary during 2018 (Poster presentations at the CNIR end-year meeting)</span></b>
+
+<img src="/news/images/cocoan_2018summary_all.jpg" width="700" align="center" hspace="20" />
+
+<br>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Cocoan Lab's 2018 end-year party </span></b>
+
+<img src="/news/images/cocoanlab_2018_endyearparty.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Wani's letter to the lab:
+
+Hope everyone went home well yesterday night. As I said to some people yesterday, 2018 was a critical period for our lab. 
+
+I think we were greatly successful. First and foremost, I like you all a lot. I feel “connected”. I’m enjoying working with you. My colleague profs call me “the king of meeting.” I think I can’t have that many meetings if I don’t enjoy it. 
+
+Second, we are doing good science of neuroimaging—we successfully finished a few projects (Caps, Semic, Fast) and some are ongoing (pico, pleasure). We submitted a revision of our first lab paper (replication), and working on a few more manuscripts (xain, caps, sequential). The most important thing is that many of you are taking a lead on your own projects now. As Byeol said yesterday, it’s important to have your own thoughts and ideas about how to solve the given problems. Ultimately, you should find the research questions that excite you the most (and also excite the PI as well 🙂) on your own. I think some of you are already getting there. In the near future, you will be able to do the research you want with a minimal help from me. 
+
+Third, we are successfully recruiting people—we got sungwoo (thanks for coming to the cocoan lab) and other new undergrads who are excited to work in the lab. Lada entered our PhD program (thanks you!). I’m sorry that we lost some good people as well, but we are strong enough to be okay even after they left. 
+
+Let’s make 2019 a great year again. I will do my best to support your growth, to be available to you, and to come up with good research/analysis ideas (and grants). And let’s publish good papers, which will give you a great joy and happiness. 🙂
+
+Thanks all!!!
+
+Wani
+</span>
+
+<br>
+
 <span style="font-size: 15px !important; color: #BD0026;">Nov 2018 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jaejoong Lee</span> and <span style="color: #1c9099;">Byeol Kim</span> successfully presented their beautiful work at the Society for Neuroscience 2018</span></b>
