--- a/news/2018.md
+++ b/news/2018.md
@@ -15,22 +15,22 @@ subtitle: What is happening in the Cocoan lab?
 
 <img src="/news/images/cocoanlab_2018_endyearparty.jpg" width="700" align="center" hspace="20" />
 
-<span style="font-size: 15px !important; color: #555;">Wani's letter to the lab:
+<span style="font-size: 13px !important; color: #222;">Wani's letter to the lab:</span>
 
-Hope everyone went home well yesterday night. As I said to some people yesterday, 2018 was a critical period for our lab. 
+<span style="font-size: 13px !important; color: #555;">Hope everyone went home well yesterday night. As I said to some people yesterday, 2018 was a critical period for our lab.</span>
 
-I think we were greatly successful. First and foremost, I like you all a lot. I feel “connected”. I’m enjoying working with you. My colleague profs call me “the king of meeting.” I think I can’t have that many meetings if I don’t enjoy it. 
+<span style="font-size: 13px !important; color: #555;">I think we were greatly successful. First and foremost, I like you all a lot. I feel “connected”. I’m enjoying working with you. My colleague profs call me “the king of meeting.” I think I can’t have that many meetings if I don’t enjoy it. </span>
 
-Second, we are doing good science of neuroimaging—we successfully finished a few projects (Caps, Semic, Fast) and some are ongoing (pico, pleasure). We submitted a revision of our first lab paper (replication), and working on a few more manuscripts (xain, caps, sequential). The most important thing is that many of you are taking a lead on your own projects now. As Byeol said yesterday, it’s important to have your own thoughts and ideas about how to solve the given problems. Ultimately, you should find the research questions that excite you the most (and also excite the PI as well 🙂) on your own. I think some of you are already getting there. In the near future, you will be able to do the research you want with a minimal help from me. 
 
-Third, we are successfully recruiting people—we got sungwoo (thanks for coming to the cocoan lab) and other new undergrads who are excited to work in the lab. Lada entered our PhD program (thanks you!). I’m sorry that we lost some good people as well, but we are strong enough to be okay even after they left. 
+<span style="font-size: 13px !important; color: #555;">Second, we are doing good science of neuroimaging—we successfully finished a few projects (Caps, Semic, Fast) and some are ongoing (pico, pleasure). We submitted a revision of our first lab paper (replication), and working on a few more manuscripts (xain, caps, sequential). The most important thing is that many of you are taking a lead on your own projects now. As Byeol said yesterday, it’s important to have your own thoughts and ideas about how to solve the given problems. Ultimately, you should find the research questions that excite you the most (and also excite the PI as well 🙂) on your own. I think some of you are already getting there. In the near future, you will be able to do the research you want with a minimal help from me.</span>
 
-Let’s make 2019 a great year again. I will do my best to support your growth, to be available to you, and to come up with good research/analysis ideas (and grants). And let’s publish good papers, which will give you a great joy and happiness. 🙂
+<span style="font-size: 13px !important; color: #555;">Third, we are successfully recruiting people—we got sungwoo (thanks for coming to the cocoan lab) and other new undergrads who are excited to work in the lab. Lada entered our PhD program (thanks you!). I’m sorry that we lost some good people as well, but we are strong enough to be okay even after they left.</span>
 
-Thanks all!!!
+<span style="font-size: 13px !important; color: #555;">Let’s make 2019 a great year again. I will do my best to support your growth, to be available to you, and to come up with good research/analysis ideas (and grants). And let’s publish good papers, which will give you a great joy and happiness. 🙂</span>
 
-Wani
-</span>
+<span style="font-size: 13px !important; color: #555;">Thanks all!!!</span>
+
+<span style="font-size: 13px !important; color: #555;">Wani</span>
 
 <br>
 
