--- a/news/2018.md
+++ b/news/2018.md
@@ -5,6 +5,11 @@ subtitle: What is happening in the Cocoan lab?
 ---
 <span style="font-size: 15px !important; color: #BD0026;">Dec 2018 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;">Bonus!</span></b>
+
+<img src="/news/images/byeol.gif" width="150" align="center" hspace="20" />
+
+
 <b><span style="font-size: 20px !important; color: #0055A9;">Cocoanlab research summary during 2018 (Poster presentations at the CNIR end-year meeting)</span></b>
 
 <img src="/news/images/cocoan_2018summary_all.jpg" width="700" align="center" hspace="20" />
