--- a/news/2018.md
+++ b/news/2018.md
@@ -10,7 +10,7 @@ subtitle: What is happening in the Cocoan lab?
 <img src="/news/images/byeol.gif" width="150" align="center" hspace="20" />
 
 
-<b><span style="font-size: 20px !important; color: #0055A9;">Cocoanlab research summary during 2018 (Poster presentations at the CNIR end-year meeting)</span></b>
+<b><span style="font-size: 20px !important; color: #0055A9;">Cocoanlab research summary for 2018 (Poster presentations at the CNIR end-year meeting)</span></b>
 
 <img src="/news/images/cocoan_2018summary_all.jpg" width="700" align="center" hspace="20" />
 
