--- a/news/2019.md
+++ b/news/2019.md
@@ -3,11 +3,19 @@ layout: page
 title: News
 subtitle: What is happening in the Cocoan lab?
 ---
+
+<span style="font-size: 15px !important; color: #BD0026;">Feb 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">A new paper on Neuroethics in South Korea has been published on Neuron</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Wani helped with revising a section on the functional neuroimaging of the paper. See the paper <a href="https://cocoanlab.github.io/pdfs/Jeong_et_al_2019_Neuron.pdf">here</a></span>
+
+
 <span style="font-size: 15px !important; color: #BD0026;">Jan 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Yongwook's paper got 200 likes on twitter!</span></b>
 
-<span style="font-size: 15px !important; color: #555;">I posted a tweet on the paper (biorxiv preprint) two days ago, and it got 200 likes within two days (Secret: I also liked it to make it 200!). See the preprint <a href="https://www.biorxiv.org/content/early/2019/01/09/514521">here</a> and the <a href="https://twitter.com/choongwanwoo/status/1083244097647857664">tweet</a></span>
+<span style="font-size: 15px !important; color: #555;">Wani posted a tweet on the paper (biorxiv preprint) two days ago, and it got 200 likes within two days (Psst, Wani liked it to make it 200!). See the preprint <a href="https://www.biorxiv.org/content/early/2019/01/09/514521">here</a> and the <a href="https://twitter.com/choongwanwoo/status/1083244097647857664">tweet</a></span>
 
 
 
