--- a/news/2019.md
+++ b/news/2019.md
@@ -8,9 +8,9 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;">National Research Foundation of Korea selected us to support our research for the next four years (2019-2022) </span></b>
 
-<span style="font-size: 15px !important; color: #555;">Our lab will be supported by the Basic Science Research Program for early career researchers through the National Research Foundation of Korea (한국연구재단) for the next four years. The research grant will support us to develop and validate fMRI-based pain biomarkers using 3T and 7T MRI and state-of-the-art machine learning techniques including Deep learning.</span>
+<span style="font-size: 15px !important; color: #555;">Our lab will be supported by the Basic Science Research Program for early career researchers through the National Research Foundation of Korea (한국연구재단) for the next four years. The research grant will support us to develop and validate fMRI-based pain biomarkers using 3T and 7T MRI and machine learning.</span>
 
-<img src="/news/images/NRF.jpg" width="500" align="center" hspace="20" />
+<img src="/news/images/NRF.jpg" width="400" align="center" hspace="20" />
 
 
 <span style="font-size: 15px !important; color: #BD0026;">Feb 2019 </span>
