--- a/news/2019.md
+++ b/news/2019.md
@@ -6,6 +6,20 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">Mar 2019 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;">Lab Photo for 2019 </span></b>
+
+<span style="font-size: 15px !important; color: #555;">We will take a lab photo every year on the first day of lab meeting of the spring semester (in South Korea, the spring semester starts at March).</span>
+
+<img src="/news/images/labphoto2019_1.jpg" width="600" align="center" hspace="20" />
+
+[high-res](/news/images/lab2019_1.jpeg)
+
+<img src="/news/images/labphoto2019_2.jpg" width="600" align="center" hspace="20" />
+
+[high-res](/news/images/lab2019_2.jpeg)
+
+<span style="font-size: 15px !important; color: #BD0026;">Mar 2019 </span>
+
 <b><span style="font-size: 20px !important; color: #0055A9;">National Research Foundation of Korea selected us to support our research for the next four years (2019-2022) </span></b>
 
 <span style="font-size: 15px !important; color: #555;">Our lab will be supported by the Basic Science Research Program for early career researchers through the National Research Foundation of Korea (한국연구재단) for the next four years. The research grant will support us to develop and validate fMRI-based pain biomarkers using 3T and 7T MRI and machine learning.</span>
