--- a/news/2019.md
+++ b/news/2019.md
@@ -10,13 +10,13 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #555;">We will take a lab photo every year on the first day of lab meeting of the spring semester (in South Korea, the spring semester starts at March).</span>
 
-<img src="/news/images/labphoto2019_1.jpg" width="600" align="center" hspace="20" />
+<center><img src="/news/images/labphoto2019_1.jpg" width="600" align="center" hspace="20" /></center>
 
-[high-res](/news/images/lab2019_1.jpeg)
+<span style="font-size: 15px !important; color: #555;">[high-res](/news/images/lab2019_1.jpeg)</span>
 
-<img src="/news/images/labphoto2019_2.jpg" width="600" align="center" hspace="20" />
+<center><img src="/news/images/labphoto2019_2.jpg" width="600" align="center" hspace="20" /></center>
 
-[high-res](/news/images/lab2019_2.jpeg)
+<span style="font-size: 15px !important; color: #555;">[high-res](/news/images/lab2019_2.jpeg)</span>
 
 <span style="font-size: 15px !important; color: #BD0026;">Mar 2019 </span>
 
