added cocoan value

--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,12 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+<span style="font-size: 15px !important; color: #BD0026;">April 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Cocoan's Values </span></b>
+
+<center><img src="/news/images/Cocoan_value_3.png" width="500" align="center" hspace="20" /></center>
+
 <span style="font-size: 15px !important; color: #BD0026;">Mar 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Lab Photo for 2019 </span></b>
