--- a/news/2019.md
+++ b/news/2019.md
@@ -6,6 +6,10 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">April 2019 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;">Yongwook's paper, “False-positive neuroimaging: Undisclosed flexibility in testing spatial hypotheses allows presenting anything as a replicated finding”, has been accepted to _NeuroImage_</span></b>
+
+<span style="font-size: 15px !important; color: #555;">In the paper, we implemented a Bayes factor calculator for the Bayesian MANOVA using the BRMS package in R and made a <a href="http://cocoanlab.skku.edu/bayes_factor_bayesian_manova/">website</a> to provide a web-based service of the analysis. See the latest version of the <a href="https://www.biorxiv.org/content/10.1101/514521v2">paper</a> and <a href="https://github.com/cocoanlab/falsepositiveneuroimaging">code</a>.</span>
+
 <b><span style="font-size: 20px !important; color: #0055A9;">Cocoan's Values </span></b>
 
 <center><img src="/news/images/Cocoan_value_3.png" width="500" align="center" hspace="20" /></center>
@@ -39,14 +43,11 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #555;">See the paper <a href="https://cocoanlab.github.io/pdfs/Jeong_et_al_2019_Neuron.pdf">here</a></span>
 
-
 <span style="font-size: 15px !important; color: #BD0026;">Jan 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Yongwook's paper got 200 likes on twitter!</span></b>
 
 <span style="font-size: 15px !important; color: #555;">Wani posted a tweet on the paper (biorxiv preprint) two days ago, and it got 200 likes within two days. See the preprint <a href="https://www.biorxiv.org/content/early/2019/01/09/514521">here</a> and the <a href="https://twitter.com/choongwanwoo/status/1083244097647857664">tweet</a></span>
-
-
 
 <img src="/news/images/tweet_like.gif" width="500" align="center" hspace="20" />
 
