--- a/news/2019.md
+++ b/news/2019.md
@@ -13,7 +13,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Yongwook's paper, “False-positive neuroimaging: Undisclosed flexibility in testing spatial hypotheses allows presenting anything as a replicated finding”, has been accepted to _NeuroImage_</span></b>
 
-<span style="font-size: 15px !important; color: #555;">In the paper, we implemented a Bayes factor calculator for the Bayesian MANOVA using the BRMS package in R and made a <a href="http://cocoanlab.skku.edu/bayes_factor_bayesian_manova/">website</a> to provide a web-based service of the analysis. See the latest version of the <a href="https://www.biorxiv.org/content/10.1101/514521v2">paper</a> and <a href="https://github.com/cocoanlab/falsepositiveneuroimaging">code</a>.</span>
+<span style="font-size: 15px !important; color: #555;">In the paper, we implemented a Bayes factor calculator for the Bayesian MANOVA using the BRMS package in R and made a <a href="http://cocoanlab.skku.edu/bayes_factor_bayesian_manova/">website</a> to provide a web-based service of the analysis. Check out the <a href="/pdfs/Hong2019_NeuroImage.pdf">paper</a> and <a href="https://github.com/cocoanlab/falsepositiveneuroimaging">code</a>.</span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Cocoan's Values </span></b>
 
