--- a/news/2019.md
+++ b/news/2019.md
@@ -8,7 +8,11 @@ subtitle: What is happening in the Cocoan lab?
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Wani's paper, “Cognitive self-regulation influences pain-related physiology,” has been accepted to _PAIN_ and chosen as an Editor's Choice article</span></b>
 
-<span style="font-size: 15px !important; color: #555;">In the paper, we developed physiological markers for pain and found that cognitive self-regulation of pain operates on the level of autonomic nervous system, producing physiologically meaningful changes. This work is done in collaboration with Gordon, a postbac RA in Tor's lab, and under a supervision of Tor. I'm so glad that this work has been chosen as an Editor's choice article, and we're working on a video abstract now. Stay tuned! You can see the most recent version of the paper [here](https://www.biorxiv.org/content/10.1101/361519v2), and an old twitter [thread](https://twitter.com/choongwanwoo/statuses/1015173555984654337) where I provided a high-level summary of the paper. Data and code is available [here](https://github.com/canlab/cognitive_regulation_physiology). </span>
+<span style="font-size: 15px !important; color: #555;">In the paper, we developed physiological markers for pain and found that cognitive self-regulation of pain operates on the level of autonomic nervous system, producing physiologically meaningful changes. This work is done in collaboration with Gordon, a postbac RA in Tor's lab, and under a supervision of Tor. Below, you can find a video abstract. You can see the most recent version of the paper (for free) [here](https://www.biorxiv.org/content/10.1101/361519v2), and an old twitter [thread](https://twitter.com/choongwanwoo/statuses/1015173555984654337) where I provided a high-level summary of the paper. Data and code is available [here](https://github.com/canlab/cognitive_regulation_physiology). </span>
+
+<br>
+<center><iframe width="600" height="338" src="https://www.youtube.com/embed/R1QtvyAt-F8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<br>
 
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Yongwook's paper, “False-positive neuroimaging: Undisclosed flexibility in testing spatial hypotheses allows presenting anything as a replicated finding”, has been accepted to _NeuroImage_</span></b>
