--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,17 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+<span style="font-size: 15px !important; color: #BD0026;">June 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Suhwan</span> and <span style="color: #1c9099;">Lada</span> successfully presented their beautiful work at the OHBM meeting</span></b>
+
+<img src="/news/images/ohbm2019.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Suhwan gave a poster presentation on "Understanding the neural mechanisms of temporal dynamics of integrating prediction into pain perception", and Lada gave a poster presentation on "Interpreting machine learning models in neuroimaging: a unified framework." We look forward to posting our work on a preprint server soon. Stay tuned!</span>
+
+<br>
+
+
 <span style="font-size: 15px !important; color: #BD0026;">April 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Wani's paper, “Cognitive self-regulation influences pain-related physiology,” has been accepted to _PAIN_ and chosen as an Editor's Choice article</span></b>
