--- a/news/2019.md
+++ b/news/2019.md
@@ -6,6 +6,14 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">June 2019 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Soo Ahn</span> successfully completed her first experiment on Pleasure and Pain.</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Soo Ahn finished her last scan after 15 months she started the project. We asked about her feelings. Sungwoo will start his experiment soon, which will be one-year long experiment. We asked for a word from him.</span>
+
+<br>
+<center><iframe width="600" height="338" src="https://www.youtube.com/embed/Dq4PHaI3DmI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<br>
+
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Suhwan</span> and <span style="color: #1c9099;">Lada</span> successfully presented their beautiful work at the OHBM meeting</span></b>
 
 <img src="/news/images/ohbm2019.jpg" width="700" align="center" hspace="20" />
