--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,16 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+
+<span style="font-size: 15px !important; color: #BD0026;">July 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Jiwon Jeon, Mijin Kim, Suhye Kim</span> successfully completed CNIR/GBME summer internship program at the cocoanlab.</span></b>
+
+<span style="font-size: 15px !important; color: #555;">They worked on the "cognitive map" project. The activity they did: Literature review (they are now cognitive map experts!), code implementation (see [hex_glm1.m](https://github.com/cocoanlab/cocoanCORE/blob/master/Misc_utilities/hex_glm1.m) and [hex_glm2.m](https://github.com/cocoanlab/cocoanCORE/blob/master/Misc_utilities/hex_glm2.m)), and fMRI data analysis using the code. I enjoyed the last four weeks with them. Jiwon and Suhye decided to spend one more month in our lab.</span>
+
+<img src="/news/images/summerinterns2019.jpg" width="700" align="center" hspace="20" />
+
+
 <span style="font-size: 15px !important; color: #BD0026;">June 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Soo Ahn</span> successfully completed her first experiment on Pleasure and Pain.</span></b>
