--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,27 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+<span style="font-size: 15px !important; color: #BD0026;">Aug 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Byeol</span> and <span style="color: #1c9099;">Yongwook</span> are awarded a Master's degree</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Congratulations, Byeol and Yongwook. Pictures are coming soon!</span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Wani</span> received the Jaeil Kim Young Scholar Paper Award (김재일소장학자논문상) from the Korean Psychological Association (한국심리학회)</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Congrats!</span>
+
+
+<img src="/news/images/JaeilKim_Young_Scholar_award.jpg" width="300" align="center" hspace="20" />
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Wani</span> gave a tutorial session on RSA at KHBM summer school</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Wani was asked to give a tutorial session on Representational similarity analysis (RSA) by the Korean Society for Human Brain Mapping (KHBM), where he serves as a staff member. The tutorial slides, codes, and data are available at [https://github.com/cocoanlab/khbm2019\_RSA\_tutorial](https://github.com/cocoanlab/khbm2019_RSA_tutorial).</span>
+
+
+<b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Yejong</span>'s surprise for us</span></b>
+
+<img src="/news/images/yejong_2019summer.jpg" width="700" align="center" hspace="20" />
 
 <span style="font-size: 15px !important; color: #BD0026;">July 2019 </span>
 
