--- a/news/2019.md
+++ b/news/2019.md
@@ -10,7 +10,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #555;">Congratulations, Byeol and Yongwook.</span>
 
-<img src="/news/images/graduation_2019summer" width="700" align="center" hspace="20" />
+<img src="/news/images/graduation_2019Aug.jpg" width="700" align="center" hspace="20" />
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Wani</span> received the Jaeil Kim Young Scholar Paper Award (김재일소장학자논문상) from the Korean Psychological Association (한국심리학회)</span></b>
 
