--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,17 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+
+<span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">We did a lab activity at the first lab meeting of the Fall semester (SWOT analysis)</span></b>
+
+<span style="font-size: 15px !important; color: #555;">Here is the [SWOT list](/news/2019_cocoan_swot) lab members came up with (without Wani). It was fun!</span>
+
+<img src="/news/images/cocoan_vision_swot_2019.jpg" width="700" align="center" hspace="20" />
+
+
+
 <span style="font-size: 15px !important; color: #BD0026;">Aug 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Byeol</span> and <span style="color: #1c9099;">Yongwook</span> are awarded a Master's degree</span></b>
