--- a/news/2019.md
+++ b/news/2019.md
@@ -7,9 +7,9 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
 
-<b><span style="font-size: 20px !important; color: #0055A9;">We did a lab activity at the first lab meeting of the Fall semester (SWOT analysis)</span></b>
+<b><span style="font-size: 20px !important; color: #0055A9;">We did a lab activity at the first lab meeting of the Fall semester, the SWOT analysis</span></b>
 
-<span style="font-size: 15px !important; color: #555;">Here is the [SWOT list](/news/2019_cocoan_swot) lab members came up with (without Wani). It was fun!</span>
+<span style="font-size: 15px !important; color: #555;">Here is the [SWOT list](/news/2019_cocoan_swot) that lab members came up with (without Wani!). It was a fun activity! I believe that accurately knowing what we are strong at and in which area we have weaknesses is the first step to grow. Let's make our lab healthier together! How exciting!</span>
 
 <img src="/news/images/cocoan_vision_swot_2019.jpg" width="700" align="center" hspace="20" />
 
