--- a/news/2019.md
+++ b/news/2019.md
@@ -7,6 +7,19 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
 
+<b><span style="font-size: 20px !important; color: #0055A9;">Lab photo for 2019 Fall semester</span></b>
+
+<img src="/news/images/lab_photo_190927.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 13px !important; color: #555;">*Three people on the left side (Jieun, Wootae, and Eunjoo) were visiting our lab from the visual cognitive neuroscience lab.</span>
+
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Sungwoo, Donghee, and Wani attended the Cognitive Computational Neuroscience conference at Berlin. </span></b>
+
+<span style="font-size: 15px !important; color: #555;">This was our first time at CCN, and we really enjoyed the talks and posters there. We attended the conference to expand our research to include more computational components in our studies. We met many people that we knew only through twitter, meaning the CCN was the right place to meet people who we are interested in!</span>
+
+<img src="/news/images/ccn2019.jpg" width="700" align="center" hspace="20" />
+
 <b><span style="font-size: 20px !important; color: #0055A9;">We did a lab activity at the first lab meeting of the Fall semester, the SWOT analysis</span></b>
 
 <span style="font-size: 15px !important; color: #555;">Here is the [SWOT list](/news/2019_cocoan_swot) that lab members came up with (without Wani!). It was a fun activity! I believe that accurately knowing what we are strong at and in which area we have weaknesses is the first step to grow. Let's make our lab healthier together! How exciting!</span>
@@ -21,7 +34,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #555;">Congratulations, Byeol and Yongwook.</span>
 
-<img src="/news/images/graduation_2019Aug.jpg" width="800" align="center" hspace="20" />
+<img src="/news/images/graduation_2019Aug.jpg" width="700" align="center" hspace="20" />
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Wani</span> received the Jaeil Kim Young Scholar Paper Award (김재일소장학자논문상) from the Korean Psychological Association (한국심리학회)</span></b>
 
