--- a/news/2019.md
+++ b/news/2019.md
@@ -4,7 +4,6 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
-
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Lab photo for 2019 Fall semester</span></b>
@@ -29,6 +28,12 @@ subtitle: What is happening in the Cocoan lab?
 
 
 <span style="font-size: 15px !important; color: #BD0026;">Aug 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Wani gave a pain talk at IBS 우리동네과학토크 series</span></b>
+
+<br>
+<center><iframe width="600" height="338" src="https://www.youtube.com/embed/7P9TzoZ_fmk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<br>
 
 <b><span style="font-size: 20px !important; color: #0055A9;"><span style="color: #1c9099;">Byeol</span> and <span style="color: #1c9099;">Yongwook</span> are awarded a Master's degree</span></b>
 
