--- a/news/2019.md
+++ b/news/2019.md
@@ -4,6 +4,32 @@ title: News
 subtitle: What is happening in the Cocoan lab?
 ---
 
+<span style="font-size: 15px !important; color: #BD0026;">Dec 2019 </span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong is awarded the Outstanding Research Award from the Asian Pain Symposium</span></b>
+
+<img src="/news/images/Jaejoong_award.jpg" width="400" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Jaejoong presented his work on the Tonic Pain Signature at the Asian Pain Symposium (Dec 5-7, Incheon, Korea) and got selected to receive the Outstanding Research Award. Congratulations, Jaejoon! We are about to submit this work to a journal really soon. Stay tuned!</span>
+
+
+<span style="font-size: 15px !important; color: #BD0026;">Oct 2019 </span>
+
+
+<b><span style="font-size: 20px !important; color: #0055A9;">Society for Neuroscience (SFN) 2019 at Chicago</span></b>
+
+<img src="/news/images/sfn2019.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Seven of us attended the SFN this year, and Byeol, Hongji, Jaejoong, and Sooahn presented their work there. Many great scientists from all around the world visited our posters, including Siri Leknes and Emily Finn (who are in the pictures). We were grateful for all their invaluable inputs to our ongoing research. </span>
+
+<span style="font-size: 15px !important; color: #555;">During this SFN, we stayed in an airbnb house together. One day, Wani made **personalized** eggs for lab members. Not sure whether all enjoyed the eggs, but Wani did his best. Because of the jetlag, we all were extremely tired, and it gave us the opportunity to take funny pictures! :)</span>
+
+<b><span style="font-size: 20px !important; color: #0055A9;">IBS conference on Neuroimaging</span></b>
+
+<img src="/news/images/ibs_conference2019.jpg" width="700" align="center" hspace="20" />
+
+<span style="font-size: 15px !important; color: #555;">Our [center](http://cnir.ibs.re.kr/) held an [IBS conference on Neuroimaging](https://ibs-conference.org/2019/cnir/) with amazing speakers. We were extremely lucky to invite many renowned neuroimaging scientists around the world, including Jim Haxby, Jack Gallant, Peter Bandettini, Jonathan Pollimeni, Seiji Ogawa, Kamil Ugurbil, Ravi Menon, Afonso Silva, etc. and "THE" SPECIAL GEUST for us was TOR WAGER, Wani's PhD advisor!!! Tor visited us!!! We had such a great time with him. We hope all of them to visit Korea again in the near future (maybe for 2021 OHBM). Until then, we will do a great science to share exciting stuff with them.</span>
+
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
 
 <b><span style="font-size: 20px !important; color: #0055A9;">Lab photo for 2019 Fall semester</span></b>
