--- a/news/2019.md
+++ b/news/2019.md
@@ -6,7 +6,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <span style="font-size: 15px !important; color: #BD0026;">Dec 2019 </span>
 
-<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong is awarded the Outstanding Research Award from the Asian Pain Symposium</span></b>
+<b><span style="font-size: 20px !important; color: #0055A9;">Jaejoong received the Outstanding Research Award from the Asian Pain Symposium</span></b>
 
 <img src="/news/images/Jaejoong_award.jpg" width="400" align="center" hspace="20" />
 
