--- a/news/2019.md
+++ b/news/2019.md
@@ -28,7 +28,7 @@ subtitle: What is happening in the Cocoan lab?
 
 <img src="/news/images/ibs_conference2019.jpg" width="700" align="center" hspace="20" />
 
-<span style="font-size: 15px !important; color: #555;">Our [center](http://cnir.ibs.re.kr/) held an [IBS conference on Neuroimaging](https://ibs-conference.org/2019/cnir/) with amazing speakers. We were extremely lucky to invite many renowned neuroimaging scientists around the world, including Jim Haxby, Jack Gallant, Peter Bandettini, Jonathan Pollimeni, Seiji Ogawa, Kamil Ugurbil, Ravi Menon, Afonso Silva, etc. and "THE" SPECIAL GUEST for us was TOR WAGER, our academic father (for Wani) and grandfather (for the rest of the lab members)!!! We had such a great time with him. We introduced him ChiMac (korean style fried chicken and beer), and he told us many interesting stories. It was a great night. We hope all of them, also Tor, to come to Korea again in the near future (maybe for OHBM 2021). Until then, we will do a great science to share exciting stuff with them.</span>
+<span style="font-size: 15px !important; color: #555;">Our [center](http://cnir.ibs.re.kr/) held an [IBS conference on Neuroimaging](https://ibs-conference.org/2019/cnir/) with amazing speakers. We were extremely lucky to invite many renowned neuroimaging scientists around the world, including Jim Haxby, Jack Gallant, Peter Bandettini, Jonathan Pollimeni, Seiji Ogawa, Kamil Ugurbil, Ravi Menon, Afonso Silva, etc. and "THE" SPECIAL GUEST for us was TOR WAGER, our academic father (for Wani) and grandfather (for the rest of the lab members)!!! We had such a great time with him. We introduced him Chimac (korean style fried chicken and beer) and Somaek (soju + beer), and he told us many interesting stories. It was a great night. We hope all of them, including Tor, to come to Korea again in the near future (maybe for OHBM 2021). Until then, we will do a great science to share exciting stuff with them.</span>
 
 <span style="font-size: 15px !important; color: #BD0026;">Sep 2019 </span>
 
